--- a/automating practice examples/package.json
+++ b/automating practice examples/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "archiver": "^5.3.1",
     "colors": "^1.4.0",
+    "readline-sync": "^1.4.10",
     "shelljs": "^0.8.5"
   }
 }
