--- a/automating practice examples/package.json
+++ b/automating practice examples/package.json
@@ -3,6 +3,7 @@
     "archiver": "^5.3.1",
     "colors": "^1.4.0",
     "fs-extra": "^10.1.0",
+    "nodemailer": "^6.7.8",
     "readline-sync": "^1.4.10",
     "shelljs": "^0.8.5"
   }
