--- a/automating practice examples/package.json
+++ b/automating practice examples/package.json
@@ -5,6 +5,7 @@
     "fs-extra": "^10.1.0",
     "nodemailer": "^6.7.8",
     "readline-sync": "^1.4.10",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "twilio": "^3.82.1"
   }
 }
