--- a/automating practice examples/package.json
+++ b/automating practice examples/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "archiver": "^5.3.1",
     "colors": "^1.4.0",
+    "csv-parse": "^5.3.0",
     "fs-extra": "^10.1.0",
     "nodemailer": "^6.7.8",
     "readline-sync": "^1.4.10",
     "shelljs": "^0.8.5",
+    "stream-transform": "^3.2.0",
     "twilio": "^3.82.1"
   }
 }
